--- a/Transfer_Learning_005.ipynb
+++ b/Transfer_Learning_005.ipynb
@@ -26,10 +26,8 @@
       "isGpuEnabled": false
     },
     "colab": {
-      "provenance": [],
-      "gpuType": "T4"
-    },
-    "accelerator": "GPU"
+      "provenance": []
+    }
   },
   "nbformat_minor": 0,
   "nbformat": 4,
