--- a/Transfer_Learning_005.ipynb
+++ b/Transfer_Learning_005.ipynb
@@ -3270,11 +3270,11 @@
         "\n"
       ],
       "metadata": {
-        "id": "Q5lFVYlz5-Bf",
-        "outputId": "4f3504f0-edbd-44da-c15d-0772a5183bde",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "Q5lFVYlz5-Bf",
+        "outputId": "4f3504f0-edbd-44da-c15d-0772a5183bde"
       },
       "execution_count": 40,
       "outputs": [
@@ -3313,12 +3313,12 @@
         "plot_loss_curves(history_10_percent)"
       ],
       "metadata": {
-        "id": "QWUlGEYa595P",
-        "outputId": "a2ae99b1-87be-40d3-da8e-46a2b9330b3a",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 927
-        }
+        },
+        "id": "QWUlGEYa595P",
+        "outputId": "a2ae99b1-87be-40d3-da8e-46a2b9330b3a"
       },
       "execution_count": 41,
       "outputs": [
@@ -3345,13 +3345,41 @@
       ]
     },
     {
-      "cell_type": "code",
-      "source": [],
+      "cell_type": "markdown",
+      "source": [
+        "**Loading the Saved Model**\n",
+        "- We will load the saved model using **load_weigths()** method by passing it the path where our model is saved."
+      ],
       "metadata": {
-        "id": "TA4w3S3D59xv"
+        "id": "a-Y4NCs9bqoW"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Load the saved model\n",
+        "model_2.load_weights(checkpoint_path)\n",
+        "\n",
+        "# Evaluate the model\n",
+        "loaded_weights_model_results = model_2.evaluate(test_data)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "TA4w3S3D59xv",
+        "outputId": "a4ffad82-53af-46ca-c2b0-db7d280d3c70"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 43,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\u001b[1m79/79\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m104s\u001b[0m 1s/step - accuracy: 0.8068 - loss: 0.7213\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
