--- a/Transfer_learning_005_2.ipynb
+++ b/Transfer_learning_005_2.ipynb
@@ -1525,11 +1525,11 @@
         "loaded_loss, loaded_accuracy = model.evaluate(test_data)"
       ],
       "metadata": {
-        "id": "ihiTJj87luPY",
-        "outputId": "d60e9485-1fa9-443b-e826-bf4edd7808a4",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "ihiTJj87luPY",
+        "outputId": "d60e9485-1fa9-443b-e826-bf4edd7808a4"
       },
       "execution_count": 21,
       "outputs": [
@@ -1548,11 +1548,11 @@
         "loaded_loss, loaded_accuracy"
       ],
       "metadata": {
-        "id": "FBAYzAXElu47",
-        "outputId": "ad147b4f-0c47-447d-c799-524f1cf00a0b",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "FBAYzAXElu47",
+        "outputId": "ad147b4f-0c47-447d-c799-524f1cf00a0b"
       },
       "execution_count": 22,
       "outputs": [
@@ -1593,11 +1593,11 @@
         "pred_probs = model.predict(test_data, verbose=1)"
       ],
       "metadata": {
-        "id": "jsOEACRfluz7",
-        "outputId": "60ab3297-d38b-4ad7-a5e5-54b485bdd2f7",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "jsOEACRfluz7",
+        "outputId": "60ab3297-d38b-4ad7-a5e5-54b485bdd2f7"
       },
       "execution_count": 23,
       "outputs": [
@@ -1625,11 +1625,11 @@
         "pred_probs.shape"
       ],
       "metadata": {
-        "id": "0X5PrChaluv6",
-        "outputId": "df78ab5a-7531-4c29-8cb2-2990fa45698d",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "0X5PrChaluv6",
+        "outputId": "df78ab5a-7531-4c29-8cb2-2990fa45698d"
       },
       "execution_count": 24,
       "outputs": [
@@ -1660,11 +1660,11 @@
         "len(pred_probs[0])"
       ],
       "metadata": {
-        "id": "Hqn_8Zb5lusZ",
-        "outputId": "2f3d2913-6002-4ec5-f9e3-a737a072190c",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "Hqn_8Zb5lusZ",
+        "outputId": "2f3d2913-6002-4ec5-f9e3-a737a072190c"
       },
       "execution_count": 26,
       "outputs": [
@@ -1687,11 +1687,11 @@
         "class_name"
       ],
       "metadata": {
-        "id": "9bkchTldlunp",
-        "outputId": "dab98c3c-cec7-417f-d577-5e97e46b6bb4",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "9bkchTldlunp",
+        "outputId": "dab98c3c-cec7-417f-d577-5e97e46b6bb4"
       },
       "execution_count": 28,
       "outputs": [
@@ -1822,12 +1822,12 @@
         "class_name[pred_probs[3000].argmax()]"
       ],
       "metadata": {
-        "id": "KJETyAhklujb",
-        "outputId": "664ada9b-f277-4fb1-915b-658fa1d096ee",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 36
-        }
+        },
+        "id": "KJETyAhklujb",
+        "outputId": "664ada9b-f277-4fb1-915b-658fa1d096ee"
       },
       "execution_count": 37,
       "outputs": [
@@ -1856,11 +1856,11 @@
         ""
       ],
       "metadata": {
-        "id": "5qKzpXY6qKHv",
-        "outputId": "778b310f-4a02-41b6-9298-c98ee7a54dfa",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "5qKzpXY6qKHv",
+        "outputId": "778b310f-4a02-41b6-9298-c98ee7a54dfa"
       },
       "execution_count": 38,
       "outputs": [
@@ -1921,11 +1921,11 @@
         "int(pred_probs[0].sum())"
       ],
       "metadata": {
-        "id": "2tAaLNEzqJ-n",
-        "outputId": "6e91c9f0-d86f-4167-a896-6a203a977e5c",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "2tAaLNEzqJ-n",
+        "outputId": "6e91c9f0-d86f-4167-a896-6a203a977e5c"
       },
       "execution_count": 40,
       "outputs": [
@@ -1958,11 +1958,11 @@
         "pred_classes[10:20]"
       ],
       "metadata": {
-        "id": "AtvGp9XduGpy",
-        "outputId": "9633e6d7-2964-4d0d-dbfe-3e682317b7a1",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "AtvGp9XduGpy",
+        "outputId": "9633e6d7-2964-4d0d-dbfe-3e682317b7a1"
       },
       "execution_count": 43,
       "outputs": [
@@ -1977,6 +1977,16 @@
           "execution_count": 43
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Comparison to test data**\n",
+        "- We will be able to compare the **prediction** to the **test dataset labels** to futher evaluate our model\n"
+      ],
+      "metadata": {
+        "id": "aFztyJBCw3Rk"
+      }
     },
     {
       "cell_type": "code",
