--- a/NLP_006.ipynb
+++ b/NLP_006.ipynb
@@ -1892,31 +1892,259 @@
       }
     },
     {
-      "cell_type": "code",
-      "source": [],
+      "cell_type": "markdown",
+      "source": [
+        "**Creating an Embedding Layer Using an Embedding Layer**\n",
+        "\n",
+        "- As discussed above the **powerful thing about embeddings** is that it can be learned during training. So, **a model** rather than going through static numbers like **1=1, 2=2**, a word's numeric representation can be improved as the model goes through data samples.\n",
+        "\n",
+        "*We will see what an embedding layer looks like by using the **tf.keras.layers.Embedding** layer*\n",
+        "\n",
+        "\n",
+        "The main parameters we are concerned about here are:\n",
+        "\n",
+        "- **input_dim -** The size of vocabulary (e.g. len(text_vectorizer.get_vocabulary() ).\n",
+        "- **output_dim -** The size of the **output embedding vector**, for example, a value of **100** outputs a feature vector of **size 100 for each word.**\n",
+        "- **embeddings_initializer -** How to initialize embedding matrix, default is **uniform** which randomly initializes embedding matrix with **uniform distribution.** This can be changed by using **pre-learned embeddings.**\n",
+        "- **input_length -** Length of sequences being passed to *embedding layer.*\n",
+        "\n"
+      ],
       "metadata": {
-        "id": "OW-Fu6W6dp93"
-      },
-      "execution_count": 54,
-      "outputs": []
+        "id": "xfPLf3bflhJP"
+      }
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "tf.random.set_seed(42)\n",
+        "from tensorflow.keras import layers\n",
+        "\n",
+        "embedding = layers.Embedding(input_dim=max_vocab_length, # set input shape\n",
+        "                             output_dim=128, # set size of embedding vector\n",
+        "                             embeddings_initializer=\"uniform\", # default, intialize\n",
+        "                             input_length=max_length, # how long is each input\n",
+        "                             name=\"embedding_1\")\n",
+        "\n",
+        "embedding"
+      ],
       "metadata": {
-        "id": "nJG0pTdjdp6q"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "OW-Fu6W6dp93",
+        "outputId": "270c8db3-e820-47ea-b0d7-0e644e69e4b6"
       },
-      "execution_count": 54,
-      "outputs": []
+      "execution_count": 57,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<Embedding name=embedding_1, built=False>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 57
+        }
+      ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "# Get a random sentence from training set\n",
+        "random_sentence = random.choice(train_sentences)\n",
+        "print(f\"Original text:\\n{random_sentence}\\\n",
+        "      \\n\\nEmbedded version:\")\n",
+        "\n",
+        "# Embed the random sentence (turn it into numerical representation)\n",
+        "sample_embed = embedding(text_vectorizer([random_sentence]))\n",
+        "sample_embed"
+      ],
       "metadata": {
-        "id": "64ZWy7_Ebeya"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "nJG0pTdjdp6q",
+        "outputId": "af29bc0f-2a6f-49bd-b188-f06cfd821b96"
       },
-      "execution_count": 54,
-      "outputs": []
+      "execution_count": 59,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Original text:\n",
+            "she keep it wet like tsunami.      \n",
+            "\n",
+            "Embedded version:\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<tf.Tensor: shape=(1, 15, 128), dtype=float32, numpy=\n",
+              "array([[[-0.01297066, -0.02195904, -0.01400921, ..., -0.00379487,\n",
+              "          0.03026727, -0.02779716],\n",
+              "        [-0.04397154, -0.0493318 , -0.02716098, ..., -0.0171834 ,\n",
+              "          0.00953572,  0.04977557],\n",
+              "        [ 0.00400318, -0.03772213, -0.03182878, ..., -0.00173933,\n",
+              "          0.00414131,  0.01522389],\n",
+              "        ...,\n",
+              "        [ 0.00772322,  0.01475552,  0.03870854, ...,  0.00799995,\n",
+              "         -0.04264641, -0.02230234],\n",
+              "        [ 0.00772322,  0.01475552,  0.03870854, ...,  0.00799995,\n",
+              "         -0.04264641, -0.02230234],\n",
+              "        [ 0.00772322,  0.01475552,  0.03870854, ...,  0.00799995,\n",
+              "         -0.04264641, -0.02230234]]], dtype=float32)>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 59
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Embedded version:\n",
+        "<tf.Tensor: shape=(1, 15, 128)>\n",
+        "\n",
+        "- **1:** here is the batch. Hence, we have a single sentence, so it is 1.\n",
+        "- **15:** This represents the sequence length (the number of word positions the model expects per sentence). This means that each **sentence is 15 words long**. If the **sentence is shorter** then **tensorflow pads it.**\n",
+        "- **128:** This is the **embedding dimension** - the number of numbers used to represent each word's meaning.\n",
+        "\n",
+        "Embedding(input_dim=vocab_size, output_dim=128)\n",
+        "\n",
+        "This means that *Each word(or token) will be represented by **128 floating-point numbers** that capture its semantic meaning - how it related to other words.\n",
+        "\n",
+        "So the tensor shape (1, 15, 128) means:\n",
+        "\n",
+        "“We have 1 sentence, which is **15 tokens long,** and **each token is represented by 128 features** that capture its meaning.”\n",
+        "\n",
+        "Word     Feature1            Feature2               Feature128\n",
+        "\n",
+        "she\t     0.01\t              -0.02\t...  \t            0.03\n",
+        "\n",
+        "keep\t  -0.04\t               0.05\t...               0.01\n",
+        "\n",
+        "it\t     0.03\t              -0.01\t...\t              0.02\n",
+        "\n",
+        "wet\t    -0.07\t              0.02\t...\t              0.04\n",
+        "\n",
+        "like\t   0.05\t              0.01\t...\t             -0.06\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "TMnNlYIQq2QX"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Each token in the sentence gets turned into a length of 128-feature vector**"
+      ],
+      "metadata": {
+        "id": "cJQ-o0j9tf72"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Check out a single token's embedding\n",
+        "sample_embed[0][0]"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "64ZWy7_Ebeya",
+        "outputId": "5bacb248-a098-4ae5-f576-0069b1df17b3"
+      },
+      "execution_count": 60,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<tf.Tensor: shape=(128,), dtype=float32, numpy=\n",
+              "array([-0.01297066, -0.02195904, -0.01400921,  0.00971802,  0.04766421,\n",
+              "        0.02338772, -0.0311384 , -0.00573128,  0.03899877, -0.01651884,\n",
+              "       -0.01235423, -0.01467463, -0.00845944,  0.00688379, -0.01666535,\n",
+              "       -0.01724969, -0.01106802, -0.04771969, -0.01349313, -0.02967961,\n",
+              "       -0.00169913, -0.00652375,  0.01597465, -0.01319063, -0.03969674,\n",
+              "        0.00306767,  0.04021614,  0.04273797,  0.03495327,  0.00675697,\n",
+              "        0.00883179, -0.01393989, -0.03112099,  0.04280615,  0.0442562 ,\n",
+              "       -0.01827794,  0.02951726, -0.0371979 ,  0.00754625, -0.04236084,\n",
+              "        0.04338081, -0.03875177,  0.03136445, -0.01911063,  0.02531462,\n",
+              "       -0.04336569,  0.03263575,  0.03755105,  0.0393413 , -0.01292682,\n",
+              "       -0.04970146, -0.04821702, -0.04926416,  0.01150564, -0.00551732,\n",
+              "       -0.02395641, -0.00448101,  0.00603098, -0.0412693 ,  0.03544572,\n",
+              "       -0.00577637, -0.01711466, -0.0076627 ,  0.0226039 ,  0.00286778,\n",
+              "       -0.01173405, -0.04081261,  0.00215137, -0.02704914,  0.04322174,\n",
+              "        0.02126792, -0.04202317,  0.03711266,  0.01536391,  0.01766967,\n",
+              "       -0.02543063,  0.01486517, -0.00780535, -0.03252198,  0.04467789,\n",
+              "        0.01383546,  0.02141711, -0.0043142 ,  0.01173081, -0.0300716 ,\n",
+              "        0.01783488,  0.01733471, -0.03407141,  0.0286735 , -0.04849866,\n",
+              "        0.02368785,  0.03657938,  0.01743415,  0.01845963,  0.01653305,\n",
+              "        0.04827353, -0.02443029,  0.01116338, -0.02385982, -0.02673836,\n",
+              "        0.02064923, -0.04747957,  0.0488419 ,  0.00192101,  0.04673843,\n",
+              "       -0.02775472, -0.0030274 ,  0.0091163 ,  0.02114207, -0.04896873,\n",
+              "        0.00980454, -0.032291  , -0.02736351,  0.02217514, -0.04583661,\n",
+              "        0.01511195,  0.03179088, -0.04284425, -0.00131596,  0.02083323,\n",
+              "       -0.03690934,  0.01302891,  0.02525233,  0.019548  ,  0.0041241 ,\n",
+              "       -0.00379487,  0.03026727, -0.02779716], dtype=float32)>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 60
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "These values might not mean much to us but they're what our computer sees each word as. When our model looks for patterns in different samples, these values will be updated as necessary."
+      ],
+      "metadata": {
+        "id": "t3-kE9wjtubc"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Now that we've got a way to turn our text data into numbers, we can start to build machine learning models to model it.\n",
+        "\n",
+        "To get plenty of practice, we're going to build a series of different models, each as its own experiment. We'll then compare the results of each model and see which one performed best.\n",
+        "\n",
+        "More specifically, we'll be building the following:\n",
+        "\n",
+        "**Model 0:** Naive Bayes (baseline)\n",
+        "\n",
+        "**Model 1:** Feed-forward neural network (dense model)\n",
+        "\n",
+        "**Model 2:** LSTM model\n",
+        "\n",
+        "**Model 3:** GRU model\n",
+        "\n",
+        "**Model 4:** Bidirectional-LSTM model\n",
+        "\n",
+        "**Model 5:** 1D Convolutional Neural Network\n",
+        "\n",
+        "**Model 6:** TensorFlow Hub Pretrained Feature Extractor\n",
+        "\n",
+        "**Model 7:** Same as model 6 with 10% of training data"
+      ],
+      "metadata": {
+        "id": "RYCAndtKt1pW"
+      }
     },
     {
       "cell_type": "code",
