--- a/NLP_006.ipynb
+++ b/NLP_006.ipynb
@@ -3182,11 +3182,11 @@
         "print(embed_weights.shape)"
       ],
       "metadata": {
-        "id": "2uq44P02ObKA",
-        "outputId": "9b01c3c8-f62a-4d73-e975-b1d58a11425c",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "2uq44P02ObKA",
+        "outputId": "9b01c3c8-f62a-4d73-e975-b1d58a11425c"
       },
       "execution_count": 71,
       "outputs": [
@@ -3216,10 +3216,10 @@
         "\n",
         "**Recurrent neural networks** can be used for a number of sequence-based problems:\n",
         "\n",
-        "**One to one:** one input, one output, such as image classification.\n",
-        "**One to many:** one input, many outputs, such as image captioning (image input, a sequence of text as caption output).\n",
-        "**Many to one:** many inputs, one outputs, such as text classification (classifying a Tweet as real diaster or not real diaster).\n",
-        "**Many to many:** many inputs, many outputs, such as machine translation (translating English to Spanish) or speech to text (audio wave as input, text as output).\n",
+        "- **One to one:** one input, one output, such as image classification.\n",
+        "- **One to many:** one input, many outputs, such as image captioning (image input, a sequence of text as caption output).\n",
+        "- **Many to one:** many inputs, one outputs, such as text classification (classifying a Tweet as real diaster or not real diaster).\n",
+        "- **Many to many:** many inputs, many outputs, such as machine translation (translating English to Spanish) or speech to text (audio wave as input, text as output).\n",
         "\n",
         "When you come across RNN's in the wild, you'll most likely come across variants of the following:\n",
         "\n",
@@ -3241,6 +3241,40 @@
       ],
       "metadata": {
         "id": "KzCfsNKzfmFT"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Model 2: LSTM**\n",
+        "\n",
+        "We will start with **LSTM powered RNN**\n",
+        "\n",
+        "- LSTM Cell and LSTM layer are often used interchangably. We will use **tensorflow.keras.layers.LSTM()**\n",
+        "\n",
+        "Our model is going to take on a very similar structure to model_1:\n",
+        "\n",
+        "**Input (text)** -> Tokenize -> Embedding -> Layers -> **Output (label probability)**\n",
+        "\n",
+        "\n",
+        "The main difference will be that we're going to **add an LSTM layer** between our **embedding** and **output.**\n",
+        "\n",
+        "**Note:-** Make sure not to re-use the **trained embeddings** and we will create another **embedding layer** *model_2_embedding* for our model. The **text_vectorizer** layer can be reused since it does not get updated during training.\n",
+        "- Think of **embedding** as a notebook that stores the meaning of words considering the context.\n",
+        "- If both models use the **same embedding layer**, then it is like reading from the same book.\n",
+        "- This is called **data leakage**\n",
+        "\n",
+        "*An embedding layer starts with random numbers like the Word2Vec or GloVE. Each word is represented by a vector - a list of numbers that the model will learn to adjust to capture the meaning. For example, when a model sees \"The cat sat on the mat\", it makes predictions, compares them with the correct answers, and **adjusts the embedding layers** to reduce the error.Over the time, the embeddings for words like \"cate\" and \"dog\" start to become **closer in meaning** while \"cat\" and \"banana\" stay far apart.*\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "BIZ3Sn8yzU8V"
       }
     },
     {
