--- a/NLP_006.ipynb
+++ b/NLP_006.ipynb
@@ -4624,10 +4624,10 @@
       ],
       "metadata": {
         "id": "SHMmwmvYBmCN",
-        "outputId": "639a74c0-268e-41ed-d393-d7136ea160c1",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "639a74c0-268e-41ed-d393-d7136ea160c1"
       },
       "execution_count": 62,
       "outputs": [
@@ -4738,10 +4738,10 @@
       ],
       "metadata": {
         "id": "nxRGS4WbBl4K",
-        "outputId": "c9c8536f-68e3-4981-a6c4-ce57844d7a37",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "c9c8536f-68e3-4981-a6c4-ce57844d7a37"
       },
       "execution_count": 63,
       "outputs": [
@@ -4778,10 +4778,10 @@
       ],
       "metadata": {
         "id": "KXR_i-S4BlrA",
-        "outputId": "f91bafc0-adb4-41e3-9899-8aaf841fae5b",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "f91bafc0-adb4-41e3-9899-8aaf841fae5b"
       },
       "execution_count": 64,
       "outputs": [
@@ -4903,12 +4903,12 @@
         "model_5.summary()"
       ],
       "metadata": {
-        "id": "ZSIXvKAdnMWM",
-        "outputId": "e05a9df5-5d6f-4c07-f4fe-308c2f16db48",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 424
-        }
+        },
+        "id": "ZSIXvKAdnMWM",
+        "outputId": "e05a9df5-5d6f-4c07-f4fe-308c2f16db48"
       },
       "execution_count": 66,
       "outputs": [
@@ -5042,11 +5042,11 @@
         "                                  SAVE_DIR, \"Conv1D\")])"
       ],
       "metadata": {
-        "id": "X21dnVIQnMSb",
-        "outputId": "d2694632-b89f-4076-f893-09b33f5e7ffd",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "X21dnVIQnMSb",
+        "outputId": "d2694632-b89f-4076-f893-09b33f5e7ffd"
       },
       "execution_count": 67,
       "outputs": [
@@ -5077,11 +5077,11 @@
         "model_5_pred_probs[:10]"
       ],
       "metadata": {
-        "id": "Ujp40FLwnMLj",
-        "outputId": "fd9775ff-d4ca-4cde-91b8-37307cad0e01",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "Ujp40FLwnMLj",
+        "outputId": "fd9775ff-d4ca-4cde-91b8-37307cad0e01"
       },
       "execution_count": 68,
       "outputs": [
@@ -5121,11 +5121,11 @@
         "model_5_preds[:10]"
       ],
       "metadata": {
-        "id": "SOb9z8gt6yCk",
-        "outputId": "c102eba5-5a22-4091-cbc5-5d850c890a0e",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "SOb9z8gt6yCk",
+        "outputId": "c102eba5-5a22-4091-cbc5-5d850c890a0e"
       },
       "execution_count": 69,
       "outputs": [
@@ -5150,11 +5150,11 @@
         "model_5_results"
       ],
       "metadata": {
-        "id": "kyXSHW9q6x_s",
-        "outputId": "b0e1d5e8-4850-491b-f254-7f4040bcc142",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "kyXSHW9q6x_s",
+        "outputId": "b0e1d5e8-4850-491b-f254-7f4040bcc142"
       },
       "execution_count": 70,
       "outputs": [
@@ -5180,11 +5180,11 @@
         "compare_baseline_to_new_results(baseline_results, model_5_results)"
       ],
       "metadata": {
-        "id": "JYxwATh16x86",
-        "outputId": "74f39c35-e78d-4f3b-c0df-e9f8e3dd9b42",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "JYxwATh16x86",
+        "outputId": "74f39c35-e78d-4f3b-c0df-e9f8e3dd9b42"
       },
       "execution_count": 71,
       "outputs": [
@@ -5199,6 +5199,15 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Using Pretrained Embeddings (Transfer Learning for NLP)**"
+      ],
+      "metadata": {
+        "id": "_E7g5rtu7LOH"
+      }
     },
     {
       "cell_type": "code",
